# python_ml

./: .gitignore  LICENSE  README.md  pyproject.toml
Ensemble/Combination/: VotingSchemes.py
Ensemble/Generation/: Bagging.py  RandomSubspace.py
Ensemble/Selection/Dynamic/: DCS.py  DES.py
Linear/: LinearRegression.py
Tests/: test_GDA.py  test_LCA.py  test_OLA.py  test_bagging.py  test_base_selection.py  test_bayesian_classifier.py  test_decision_trees.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_parzen.py  test_randomSubspace.py  test_random_forest.py  test_random_subspace.py  test_softmax_regression.py  test_voting_schemes.py
python_ml/Bayes/: BayesianClassifier.py
python_ml/Clustering/: kmeans.py
python_ml/Ensemble/: __init__.py
python_ml/Ensemble/Generation/: Bagging.py  RandomSubspace.py
python_ml/Ensemble/Selection/: BaseSelection.py
python_ml/Linear/: LinearRegression.py  LogisticRegression.py  SoftmaxRegression.py
python_ml/NearestNeighbors/: knn.py
python_ml/Tree/: DecisionTree.py
src/python_ml/Bayes/: BayesianClassifier.py
src/python_ml/Clustering/: kmeans.py
src/python_ml/Ensemble/Combination/: VotingSchemes.py
src/python_ml/Ensemble/Generation/: Bagging.py  RandomForest.py  RandomSubspace.py
src/python_ml/Linear/: GaussianDiscriminantAnalysis.py  LinearRegression.py
src/python_ml/NearestNeighbors/: knn.py
src/python_ml/Parzen/: Parzen.py
tests/: test_LCA.py  test_OLA.py  test_base_selection.py  test_decision_trees.py  test_kmeans.py  test_knn.py  test_logistic_regression.py
(+2 files in other folders)
